@@ -4,6 +4,7 @@ openwebrx (1.2.59) bullseye jammy; urgency=low
   * Added copyright-free Mirics driver for SDRPlay and clones.
   * Fixed OpenWebRX startup failure if MQTT connection fails.
   * Volume control is now logarithmic, in -55db to +5db range.
+  * Removing repeaters.json when receiver moves by >10km.
   * Added Aircraft Emergency Frequency bookmark.
 
  -- Marat Fayzullin <luarvique@gmail.com>  Mon, 27 May 2024 16:12:00 +0000
